# Quality-Control-GR-R-Analysis-Agent

./: .api_json_log_test.txt  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  GO_TO_MARKET.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_PROGRESS.md  README.md  RUNBOOK.md  TESTING.md  USER_TESTING_GUIDE.md  alembic.ini  chat_body.json  check_jsx.py  docker-compose.yml  index.html  kkk.py  launch_api.ps1  package.json  pyproject.toml  requirements.txt  run_test.ps1  start_backend.bat  start_frontend.bat  start_servers.ps1  test_api.py  test_out.txt  test_out2.txt  test_out3.txt  test_out4.txt  test_out_sql.txt  test_results.txt  test_results_latest.txt  test_users.db  test_users_rate.db  test_workflow.py  unit_test_log.txt  (+2 more)
.cache/: backend_grr_analyze.json  backend_grr_history.json  backend_spc_analyze.json
.claude/: launch.json
agent/: __init__.py  alert_engine.py  alert_manager.py  alerts.py  consumer.py  gemini_analyzer.py  llm_analyst.py  orchestrator.py
alembic/: env.py
api/: __init__.py  ai_routes.py  auth.py  main.py  quality_routes.py  rate_limit.py  realtime.py  startup.py
app/: Alerts.jsx  Assistant.jsx  Dashboard.jsx  GRRStudies.jsx  ReviewQueue.jsx  app.jsx  charts.jsx  fx.jsx  index.html  lib.jsx  shell.jsx
core/: __init__.py  config.py  logging_config.py  settings_store.py
dashboard/: .dockerignore  Dockerfile  forge_ref.html  package-lock.json  package.json
data/: quality_control.db
db/: database.py  models.py
docs/: ENVIRONMENT.md
grr/: __init__.py  acceptance.py  calculator.py  report_generator.py
ml_tools/: __init__.py  base_adapter.py  gemini_adapter.py  mlflow_adapter.py  registry.py
monitoring/: prometheus.yml
schemas/: __init__.py  measurement.py
scripts/: bootstrap_env.py  (+24 more)
(+146 files in other folders)
